# mini-pd

./: Cargo.toml  README.md
src/: main.rs
src/allocator/: id.rs  tso.rs
src/cluster/: cluster.rs  codec.rs  query.rs
src/kv/: fsm.rs  msg.rs
src/net/: server.rs
src/net/service/: pd.rs
